# eif

./: .gitignore  CNAME  CONTRIBUTING.md  README.md  accounts.example.json  accounts.json  eif.py  index.html  pyproject.toml
atoms/compute/lambda/: outputs.tf
atoms/networking/cloudfront/: main.tf  outputs.tf
atoms/security/sg/: main.tf  outputs.tf  variables.tf
atoms/security/waf/: main.tf
atoms/storage/rds/: main.tf
atoms/storage/s3/: main.tf  outputs.tf
eif/: __init__.py  __main__.py  commands.py  core.py  deploy.py  diff.py  init.py  packages.py  registry.py  render.py  scaffold.py  snapshot.py  ui.py
examples/providers/aws/: provider.tf.j2
examples/providers/azure/: provider.tf.j2
examples/providers/gcp/: backend.tf.j2
matter/three-tier-app/: composition.json  dev.example.json  dev.json  main.tf.j2  prod.example.json  prod.json  test.example.json  test.json
matters/single-page-application/aws/: composition.json  main.tf.j2
matters/single-page-application/azure/: composition.json  dev.example.json  main.tf.j2  prod.example.json
matters/single-page-application/gcp/: composition.json  dev.example.json  main.tf.j2
matters/three-tier-app/: main.tf.j2
matters/three-tier-app/aws/: main.tf.j2  outputs.tf.j2
molecules/db/: main.tf  variables.tf
molecules/db/v1/: main.tf
molecules/lambda-svc/: main.tf  outputs.tf  variables.tf
molecules/lambda-svc/v1/: main.tf
molecules/swa/: main.tf  outputs.tf
providers/aws/: backend.tf.j2  provider.tf.j2
providers/azure/: backend.tf.j2  provider.tf.j2
providers/gcp/: provider.tf.j2
(+62 files in other folders)
