[project]
name = "eif"
version = "0.3.0"
description = "Elemental Infrastructure Framework"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "questionary>=2.0",
]

[project.scripts]
eif = "eif.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
